- Styling: fixed spacing and border radius when there's custom grid actions for v2.

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -6553,10 +6553,10 @@ tr.row-highlight td {
   border: 0 !important;
 }
 .grid.grid-panel tfoot > tr:last-child td:first-child {
-  border-bottom-left-radius: var(--rounded-small);
+  border-bottom-left-radius: var(--rounded-medium);
 }
 .grid.grid-panel tfoot > tr:last-child td:last-child {
-  border-bottom-right-radius: var(--rounded-small);
+  border-bottom-right-radius: var(--rounded-medium);
 }
 
 .grid-columncommand .btn-danger {
@@ -6767,6 +6767,12 @@ td.grid-col-actions {
 }
 .grid-actions .btn-grid-custom-action {
   margin-bottom: var(--spacing-xsmall);
+}
+
+.grid-actions:has(.btn-grid-custom-action) {
+  padding-top: var(--spacing-xsmall) !important;
+  border-bottom-left-radius: var(--rounded-medium);
+  border-bottom-right-radius: var(--rounded-medium);
 }
 
 td.grid-actions {
